--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -5,10 +5,10 @@ Makefile
 Makefile.Debug
 Makefile.Release
 .qmake.stash
-zecpaperwalletui
-zecpaperwalletui.app/
-zecpaperwalletui_plugin_import.cpp
-zecpaperwalletui.pro.user
+hushpaperwalletui
+hushpaperwalletui.app/
+hushpaperwalletui_plugin_import.cpp
+hushpaperwalletui.pro.user
 .vscode/
 ui*.h
 *.swp
