--- a/ui/hushpaperwalletui_resource.rc
+++ b/ui/hushpaperwalletui_resource.rc
@@ -1,6 +1,6 @@
 #include <windows.h>
 
-IDI_ICON1	ICON	DISCARDABLE	"/opt/zecpaperwallet/ui/res/icon.ico"
+IDI_ICON1	ICON	DISCARDABLE	"/opt/hushpaperwallet/ui/res/icon.ico"
 
 VS_VERSION_INFO VERSIONINFO
 	FILEVERSION 0,0,0,0
@@ -23,8 +23,8 @@ VS_VERSION_INFO VERSIONINFO
 				VALUE "FileDescription", "\0"
 				VALUE "FileVersion", "0.0.0.0\0"
 				VALUE "LegalCopyright", "\0"
-				VALUE "OriginalFilename", "zecpaperwalletui.exe\0"
-				VALUE "ProductName", "zecpaperwalletui\0"
+				VALUE "OriginalFilename", "hushpaperwalletui.exe\0"
+				VALUE "ProductName", "hushpaperwalletui\0"
 				VALUE "ProductVersion", "0.0.0.0\0"
 			END
 		END
