--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zecpaperwallet"
+name = "hushpaperwallet"
 version = "0.1.0"
 authors = ["Aditya Kulkarni <adityapk@gmail.com>"]
 edition = "2018"
@@ -13,7 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 sha2 = "0.8.0"
 wasm-bindgen = "0.2"
-zecpaperlib = { path = "../lib", default-features = false }
+hushpaperlib = { path = "../lib", default-features = false }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
