--- a/ui/qtlib/Cargo.toml
+++ b/ui/qtlib/Cargo.toml
@@ -10,4 +10,4 @@ crate-type = ["staticlib"]
 
 [dependencies]
 libc = "0.2.58"
-hushpaperlib = { path = "../../lib" }
+silentdragonpaperlib = { path = "../../lib" }
